[package]
name = "test-alkahest-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
alkahest-rs = { git = "https://github.com/VAR-META-Tech/alkahest-rs", branch = "main" }
futures-util = "0.3"
tokio = { version = "1.44", features = ["full"] }
alloy = { version = "0.15", features = [
    "full",
    "node-bindings",
    "signers",
    "rlp",
    "eip712",
] }

# misc
eyre = "0.6"
serde = "1.0"
serde_json = "1.0"
futures = "0.3.31"
itertools = "0.14.0"